apps/dev/auth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: hashicorp/http-echo
          args:
            - "-text=Hello from Auth Service"
          ports:
            - containerPort: 5678
